# cspd-bsp

./: .gitignore  ARCHITECTURE.md  BUGFIX.patch  BUG_REPORT.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_PDL_APPS.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  README.md  REFACTOR_PLAN.md  SUMMARY.md  TEST_HANG_ISSUE.md  TODO.md  build.sh  build_tests.sh  fix_osal_magic_numbers.sh  magic_numbers_report.txt  main.c  scan_magic_numbers.sh  test.sh
apps/: CMakeLists.txt  README.md
apps/can_gateway/: can_gateway.c  can_gateway.h  main.c
apps/can_gateway/include/: can_gateway.h
apps/can_gateway/src/: can_gateway.c  main.c
apps/docs/: ARCHITECTURE.md  README.md  USAGE_GUIDE.md
apps/protocol_converter/: main.c  payload_service.c  payload_service.h  protocol_converter.c  protocol_converter.h
apps/protocol_converter/include/: payload_pdl.h  payload_service.h  protocol_converter.h
apps/protocol_converter/src/: main.c  payload_pdl.c  protocol_converter.c
apps/sample_app/: CMakeLists.txt  README.md
apps/sample_app/src/: main.c
apps/test_runner/: CMakeLists.txt  main.c
hal/: CMakeLists.txt  README.md  hal-config.cmake.in
hal/docs/: API_REFERENCE.md  ARCHITECTURE.md  README.md  USAGE_GUIDE.md
hal/inc/: hal_can.h  hal_network.h  hal_serial.h
hal/include/: hal_can.h  hal_network.h  hal_serial.h
hal/include/config/: can_types.h
hal/linux/: hal_can_linux.c  hal_can_linux_fixed.c  hal_network_linux.c  hal_serial_linux.c
hal/src/linux/: hal_can.c  hal_can_linux.c  hal_i2c.c  hal_network_linux.c  hal_serial.c  hal_serial_linux.c  hal_spi.c
hal/src/macos/: hal_can.c  hal_serial.c
hal/tests/: CMakeLists.txt  main.c  test_can.c
lib/libtest/: CMakeLists.txt
lib/libtest/include/: libtest.h  test_assert.h  test_registry.h
lib/libtest/src/: test_menu.c  test_registry.c  test_runner.c
libutest/: CMakeLists.txt
libutest/include/: libutest.h  test_registry.h
libutest/src/: test_menu.c  test_registry.c  test_runner.c
osal/: CMakeLists.txt  README.md  osal-config.cmake.in
osal/docs/: API_REFERENCE.md  ARCHITECTURE.md  README.md  TYPE_GUIDE.md  USAGE_GUIDE.md
osal/freertos/: ostask.c
osal/inc/: common_types.h  osal.h  osapi_clock.h  osapi_error.h  osapi_file.h  osapi_heap.h  osapi_log.h  osapi_mutex.h  osapi_network.h  osapi_queue.h  osapi_signal.h  osapi_task.h
osal/include/: osal.h  osal_errno.h  osal_error.h  osal_file.h  osal_heap.h  osal_log.h  osal_network.h  osal_queue.h  osal_socket.h  osal_string.h  osal_task.h  osal_termios.h  osal_types.h  osal_unistd.h  osapi_file.h  osapi_heap.h  osapi_queue.h  osapi_signal.h  osapi_task.h
osal/include/config/: log_config.h
osal/include/ipc/: osal_atomic.h  osal_mutex.h  osal_queue.h  osal_task.h
osal/include/lib/: osal_errno.h  osal_heap.h  osal_stdio.h  osal_string.h
osal/include/net/: osal_socket.h  osal_termios.h
osal/linux/: os_clock.c  os_file.c  os_heap.c  os_init.c  os_log.c  os_mutex.c  os_network.c  os_queue.c  os_queue_fixed.c  os_signal.c  os_task.c  os_task_fixed.c
osal/tests/: CMakeLists.txt  main.c  test_mutex.c  test_queue.c  test_signal.c  test_task.c
pcl/: CHANGELOG.md  CMakeLists.txt  README.md  pcl-config.cmake.in
pcl/docs/: API_REFERENCE.md  ARCHITECTURE.md
pcl/examples/: pcl_example.c  xconfig_example.c
pcl/src/: pcl_api.c  pcl_register.c  xconfig_api.c
pcl/tests/: CMakeLists.txt  main.c  test_pcl_api.c
pdl/: CMakeLists.txt  README.md  pdl-config.cmake.in
pdl/docs/: API_REFERENCE.md  ARCHITECTURE.md  README.md  USAGE_GUIDE.md
pdl/include/: pdl_bmc.h  pdl_device.h  pdl_mcu.h  pdl_os.h  pdl_payload_bmc.h  pdl_payload_os.h  pdl_peripheral_device.h  pdl_persistent_queue.h  pdl_satellite.h
pdl/tests/: CMakeLists.txt  main.c
service/: CMakeLists.txt
service/inc/: persistent_queue.h  service_payload_bmc.h  service_payload_linux.h  service_power.h  service_satellite.h  watchdog.h
service/include/: service_satellite.h
service/linux/: service_payload_bmc.c  service_payload_linux.c  service_power.c  service_satellite.c  watchdog.c
service/rtos/: README.md
tests/: BUILD_FIXES.md  CLEANUP_REPORT.md  CMakeLists.txt  FINAL_FIXES.md  Makefile  QUICKSTART.md  README.md  SUMMARY.md  test_framework.h  test_main_unified.c  test_runner.c  test_runner.h
tests/apps/: CMakeLists.txt  test_can_gateway.c  test_can_gateway_module.c  test_protocol_converter.c  test_protocol_converter_module.c
tests/core/: CMakeLists.txt  main.c  test_menu.c  test_registry.c  test_runner.c  unittest_entry.c  unittest_framework.h  unittest_runner.c
tests/docs/: ARCHITECTURE.md  WRITING_TESTS.md
tests/framework/: CMakeLists.txt
tests/hal/: CMakeLists.txt  test_can.c  test_hal_can.c  test_hal_can_module.c  test_hal_serial.c
tests/include/: test_assert.h  test_framework.h  test_runner.h  tests_core.h
tests/osal/: CMakeLists.txt  test_main.c  test_mutex.c  test_os_file.c  test_os_mutex.c  test_os_network.c  test_os_queue.c  test_os_signal.c  test_os_task.c  test_osal_atomic.c  test_osal_clock.c  test_osal_file.c  test_osal_heap.c  test_osal_log.c  test_osal_mutex.c  test_osal_queue.c  test_osal_resource_tracker.c  test_osal_signal.c  test_osal_string.c  test_osal_task.c  test_osal_time.c
tests/pcl/: CMakeLists.txt  test_pcl_api.c
tests/pdl/: CMakeLists.txt  test_payload_pdl_module.c  test_pdl_bmc.c  test_pdl_mcu.c  test_pdl_satellite.c  test_watchdog_restart.c
tests/runner/: CMakeLists.txt
tests/service/: CMakeLists.txt  test_payload_service.c  test_payload_service_module.c  test_watchdog_restart.c
tests/src/: test_entry.c  test_runner.c
xconfig/: CHANGELOG.md  CMakeLists.txt  README.md  xconfig-config.cmake.in
xconfig/docs/: API_REFERENCE.md  ARCHITECTURE.md  USAGE_GUIDE.md
xconfig/examples/: hw_config_example.c  xconfig_example.c
xconfig/include/: hw_config_api.h  hw_config_types.h  xconfig.h  xconfig_api.h  xconfig_common.h  xconfig_hardware_interface.h  xconfig_mcu.h  xconfig_satellite.h  xconfig_sensor.h  xconfig_storage.h
xconfig/src/: hw_config_api.c  hw_config_register.c  xconfig_api.c  xconfig_register.c
(+237 files in other folders)
